y.output
Terminale, die in Grammatik unbenutzt sind

   gleich
   groesser
   eklammerauf
   eklammerzu
   oder
   kommaliste
   parameter


Zustand 45 Konflikte: 1 Schiebe/Reduziere


Grammatik

    0 $accept: S $end

    1 S: aus
    2  | Z
    3  | S Z
    4  | S aus

    5 Z: term klammerauf A klammerzu C

    6 Y: komma G
    7  | punkt aus

    8 A: leereliste B
    9  | pipeliste B
   10  | variable B

   11 B: komma A
   12  | %empty

   13 C: punkt aus
   14  | doppelpunkt bindestrich D aus

   15 D: G Y
   16  | variable E

   17 E: kleiner variable F
   18  | groessergleich variable F

   19 F: komma Z

   20 G: term klammerauf A klammerzu
   21  | Z


Terminale und die Regeln, in denen sie verwendet werden

$end (0) 0
error (256)
aus (258) 1 4 7 13 14
bindestrich (259) 14
doppelpunkt (260) 14
gleich (261)
groesser (262)
kleiner (263) 17
groessergleich (264) 18
klammerauf (265) 5 20
klammerzu (266) 5 20
eklammerauf (267)
eklammerzu (268)
komma (269) 6 11 19
punkt (270) 7 13
oder (271)
leereliste (272) 8
variable (273) 10 16 17 18
term (274) 5 20
pipeliste (275) 9
kommaliste (276)
parameter (277)


Nicht-Terminal und die Regeln, in denen sie verwendet werden

$accept (23)
    auf der linken Seite: 0
S (24)
    auf der linken Seite: 1 2 3 4, auf der rechten Seite: 0 3 4
Z (25)
    auf der linken Seite: 5, auf der rechten Seite: 2 3 19 21
Y (26)
    auf der linken Seite: 6 7, auf der rechten Seite: 15
A (27)
    auf der linken Seite: 8 9 10, auf der rechten Seite: 5 11 20
B (28)
    auf der linken Seite: 11 12, auf der rechten Seite: 8 9 10
C (29)
    auf der linken Seite: 13 14, auf der rechten Seite: 5
D (30)
    auf der linken Seite: 15 16, auf der rechten Seite: 14
E (31)
    auf der linken Seite: 17 18, auf der rechten Seite: 16
F (32)
    auf der linken Seite: 19, auf der rechten Seite: 17 18
G (33)
    auf der linken Seite: 20 21, auf der rechten Seite: 6 15


Zustand 0

    0 $accept: . S $end

    aus   schiebe und gehe zu Zustand 1 über
    term  schiebe und gehe zu Zustand 2 über

    S  gehe zu Zustand 3 über
    Z  gehe zu Zustand 4 über


Zustand 1

    1 S: aus .

    $default  reduziere mit Regel 1 (S)


Zustand 2

    5 Z: term . klammerauf A klammerzu C

    klammerauf  schiebe und gehe zu Zustand 5 über


Zustand 3

    0 $accept: S . $end
    3 S: S . Z
    4  | S . aus

    $end  schiebe und gehe zu Zustand 6 über
    aus   schiebe und gehe zu Zustand 7 über
    term  schiebe und gehe zu Zustand 2 über

    Z  gehe zu Zustand 8 über


Zustand 4

    2 S: Z .

    $default  reduziere mit Regel 2 (S)


Zustand 5

    5 Z: term klammerauf . A klammerzu C

    leereliste  schiebe und gehe zu Zustand 9 über
    variable    schiebe und gehe zu Zustand 10 über
    pipeliste   schiebe und gehe zu Zustand 11 über

    A  gehe zu Zustand 12 über


Zustand 6

    0 $accept: S $end .

    $default  annehmen


Zustand 7

    4 S: S aus .

    $default  reduziere mit Regel 4 (S)


Zustand 8

    3 S: S Z .

    $default  reduziere mit Regel 3 (S)


Zustand 9

    8 A: leereliste . B

    komma  schiebe und gehe zu Zustand 13 über

    $default  reduziere mit Regel 12 (B)

    B  gehe zu Zustand 14 über


Zustand 10

   10 A: variable . B

    komma  schiebe und gehe zu Zustand 13 über

    $default  reduziere mit Regel 12 (B)

    B  gehe zu Zustand 15 über


Zustand 11

    9 A: pipeliste . B

    komma  schiebe und gehe zu Zustand 13 über

    $default  reduziere mit Regel 12 (B)

    B  gehe zu Zustand 16 über


Zustand 12

    5 Z: term klammerauf A . klammerzu C

    klammerzu  schiebe und gehe zu Zustand 17 über


Zustand 13

   11 B: komma . A

    leereliste  schiebe und gehe zu Zustand 9 über
    variable    schiebe und gehe zu Zustand 10 über
    pipeliste   schiebe und gehe zu Zustand 11 über

    A  gehe zu Zustand 18 über


Zustand 14

    8 A: leereliste B .

    $default  reduziere mit Regel 8 (A)


Zustand 15

   10 A: variable B .

    $default  reduziere mit Regel 10 (A)


Zustand 16

    9 A: pipeliste B .

    $default  reduziere mit Regel 9 (A)


Zustand 17

    5 Z: term klammerauf A klammerzu . C

    doppelpunkt  schiebe und gehe zu Zustand 19 über
    punkt        schiebe und gehe zu Zustand 20 über

    C  gehe zu Zustand 21 über


Zustand 18

   11 B: komma A .

    $default  reduziere mit Regel 11 (B)


Zustand 19

   14 C: doppelpunkt . bindestrich D aus

    bindestrich  schiebe und gehe zu Zustand 22 über


Zustand 20

   13 C: punkt . aus

    aus  schiebe und gehe zu Zustand 23 über


Zustand 21

    5 Z: term klammerauf A klammerzu C .

    $default  reduziere mit Regel 5 (Z)


Zustand 22

   14 C: doppelpunkt bindestrich . D aus

    variable  schiebe und gehe zu Zustand 24 über
    term      schiebe und gehe zu Zustand 25 über

    Z  gehe zu Zustand 26 über
    D  gehe zu Zustand 27 über
    G  gehe zu Zustand 28 über


Zustand 23

   13 C: punkt aus .

    $default  reduziere mit Regel 13 (C)


Zustand 24

   16 D: variable . E

    kleiner         schiebe und gehe zu Zustand 29 über
    groessergleich  schiebe und gehe zu Zustand 30 über

    E  gehe zu Zustand 31 über


Zustand 25

    5 Z: term . klammerauf A klammerzu C
   20 G: term . klammerauf A klammerzu

    klammerauf  schiebe und gehe zu Zustand 32 über


Zustand 26

   21 G: Z .

    $default  reduziere mit Regel 21 (G)


Zustand 27

   14 C: doppelpunkt bindestrich D . aus

    aus  schiebe und gehe zu Zustand 33 über


Zustand 28

   15 D: G . Y

    komma  schiebe und gehe zu Zustand 34 über
    punkt  schiebe und gehe zu Zustand 35 über

    Y  gehe zu Zustand 36 über


Zustand 29

   17 E: kleiner . variable F

    variable  schiebe und gehe zu Zustand 37 über


Zustand 30

   18 E: groessergleich . variable F

    variable  schiebe und gehe zu Zustand 38 über


Zustand 31

   16 D: variable E .

    $default  reduziere mit Regel 16 (D)


Zustand 32

    5 Z: term klammerauf . A klammerzu C
   20 G: term klammerauf . A klammerzu

    leereliste  schiebe und gehe zu Zustand 9 über
    variable    schiebe und gehe zu Zustand 10 über
    pipeliste   schiebe und gehe zu Zustand 11 über

    A  gehe zu Zustand 39 über


Zustand 33

   14 C: doppelpunkt bindestrich D aus .

    $default  reduziere mit Regel 14 (C)


Zustand 34

    6 Y: komma . G

    term  schiebe und gehe zu Zustand 25 über

    Z  gehe zu Zustand 26 über
    G  gehe zu Zustand 40 über


Zustand 35

    7 Y: punkt . aus

    aus  schiebe und gehe zu Zustand 41 über


Zustand 36

   15 D: G Y .

    $default  reduziere mit Regel 15 (D)


Zustand 37

   17 E: kleiner variable . F

    komma  schiebe und gehe zu Zustand 42 über

    F  gehe zu Zustand 43 über


Zustand 38

   18 E: groessergleich variable . F

    komma  schiebe und gehe zu Zustand 42 über

    F  gehe zu Zustand 44 über


Zustand 39

    5 Z: term klammerauf A . klammerzu C
   20 G: term klammerauf A . klammerzu

    klammerzu  schiebe und gehe zu Zustand 45 über


Zustand 40

    6 Y: komma G .

    $default  reduziere mit Regel 6 (Y)


Zustand 41

    7 Y: punkt aus .

    $default  reduziere mit Regel 7 (Y)


Zustand 42

   19 F: komma . Z

    term  schiebe und gehe zu Zustand 2 über

    Z  gehe zu Zustand 46 über


Zustand 43

   17 E: kleiner variable F .

    $default  reduziere mit Regel 17 (E)


Zustand 44

   18 E: groessergleich variable F .

    $default  reduziere mit Regel 18 (E)


Zustand 45

    5 Z: term klammerauf A klammerzu . C
   20 G: term klammerauf A klammerzu .

    doppelpunkt  schiebe und gehe zu Zustand 19 über
    punkt        schiebe und gehe zu Zustand 20 über

    punkt     [reduziere mit Regel 20 (G)]
    $default  reduziere mit Regel 20 (G)

    C  gehe zu Zustand 21 über


Zustand 46

   19 F: komma Z .

    $default  reduziere mit Regel 19 (F)
